--- a/AmericanOptionEarlyExercise.ipynb
+++ b/AmericanOptionEarlyExercise.ipynb
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# output.to_excel(\"EarlyExerciseCandidate.xlsx\")"
+    "output.to_excel(\"EarlyExerciseCandidate.xlsx\")"
    ]
   }
  ],
