--- a/AmericanOptionEarlyExercise.ipynb
+++ b/AmericanOptionEarlyExercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,34 +21,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aapl_div = 0.22\n",
+    "ticker = \"aapl\"\n",
+    "type = \"call\"\n",
+    "strike_price = [100,110,120,130,140,150]\n",
+    "div = 0.22\n",
     "sofr = 0.27\n",
     "ex_div_date = datetime(2022,5,6)\n",
     "pay_date = datetime(2022,5,12)\n",
     "today = datetime.now()\n",
-    "expiration = datetime(2022,5,20)\n",
-    "type = \"call\"\n",
-    "strike_price = [100,110,120,130,140,150]"
+    "expiration = datetime(2022,5,20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "if type == \"call\":\n",
     "    output = pd.DataFrame(columns = ['Contract Name','Type','Strike' , 'Early Exercise'])\n",
-    "    df = ops.get_puts(\"aapl\", date = expiration)\n",
+    "    df = ops.get_puts(ticker, date = expiration)\n",
     "    df[\"Exercise Price\"] = df[\"Strike\"]\n",
     "    option_detail = df.drop(\"Implied Volatility\",axis = 1).set_index(\"Strike\")\n",
     "    for i in strike_price:\n",
-    "        aapl_div_with_int = aapl_div*(1+sofr*((expiration - pay_date).days/360))\n",
-    "        exercise = aapl_div_with_int > option_detail.at[i,\"Ask\"] + i*sofr/100*((expiration - today).days/360)\n",
+    "        div_with_int = div*(1+sofr*((expiration - pay_date).days/360))\n",
+    "        exercise = div_with_int > option_detail.at[i,\"Ask\"] + i*sofr/100*((expiration - today).days/360)\n",
     "        temp = {\"Contract Name\":option_detail.at[i,\"Contract Name\"],\"Type\":\"Call\", \"Strike\":i,\"Early Exercise\": exercise}\n",
     "        output = output.append(temp, ignore_index= True)\n",
     "else:\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -65,13 +66,13 @@
    "source": [
     "if type == \"put\":\n",
     "    output = pd.DataFrame(columns = ['Contract Name','Type','Strike' , 'Early Exercise', \"Blackout Period\"])\n",
-    "    df2 = ops.get_calls(\"aapl\", date = expiration)\n",
+    "    df2 = ops.get_calls(ticker, date = expiration)\n",
     "    df2[\"Exercise Price\"] = df2[\"Strike\"]\n",
     "    option_detail = df2.drop(\"Implied Volatility\",axis = 1).set_index(\"Strike\")\n",
     "    for i in strike_price:\n",
-    "        aapl_div_with_int = aapl_div*(1+sofr*((expiration - pay_date).days/360))\n",
-    "        exercise = i*sofr/100*((expiration - today).days/360) > aapl_div_with_int + option_detail.at[i,\"Ask\"]\n",
-    "        black_out = aapl_div / (i*sofr/100*(1/360))\n",
+    "        div_with_int = div*(1+sofr*((expiration - pay_date).days/360))\n",
+    "        exercise = i*sofr/100*((expiration - today).days/360) > div_with_int + option_detail.at[i,\"Ask\"]\n",
+    "        black_out = div / (i*sofr/100*(1/360))\n",
     "        temp = {\"Contract Name\":option_detail.at[i,\"Contract Name\"],\"Type\":\"Put\", \"Strike\":i,\"Early Exercise\": exercise, \"Blackout Period\": black_out}\n",
     "        output = output.append(temp, ignore_index= True)\n",
     "else:\n",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +168,7 @@
        "5  AAPL220520P00150000  Call    150          False"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
